# iot-device

./: .gitignore  Cargo.toml  build.sh  partition.csv  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs
