[package]
name = "iot-device"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = [ "std", "embassy", "esp-idf-svc/native" ]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false, features = ["alloc"] }
esp-idf-sys = "0.34"
esp-idf-hal = "0.43"
embedded-hal = "1.0"
embedded-svc = "0.27"
anyhow = "1.0.82"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
dht-sensor = "0.2.1"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "1.1.0" }

[build-dependencies]
embuild = "0.31.3"
